module(
  name = "babylon",
  version = "1.1.3",
  compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "abseil-cpp", version = "20230802.1", repo_name = "com_google_absl")
bazel_dep(name = "protobuf", version = "25.3", repo_name = "com_google_protobuf")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
bazel_dep(name = "boost.preprocessor", version = "1.83.0.bzl.1")
bazel_dep(name = "boost.spirit", version = "1.83.0.bzl.1")

bazel_dep(name = "rules_cuda", version = "0.2.2-dev", dev_dependency = True)
cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain", dev_dependency = True)
cuda.local_toolchain()
