module(
  name = 'babylon',
  version = '1.4.2',
  compatibility_level = 1,
)

################################################################################
# LOWER BOUND dependency versions.
# Bzlmod follows MVS: https://bazel.build/external/module
# Thus the highest version in their module graph is resolved.
bazel_dep(name = 'abseil-cpp', version = '20220623.1', repo_name = 'com_google_absl')
bazel_dep(name = 'bazel_skylib', version = '1.0.3')
bazel_dep(name = 'boost.preprocessor', version = '1.83.0.bcr.1')
bazel_dep(name = 'boost.spirit', version = '1.83.0')
bazel_dep(name = 'protobuf', version = '3.19.6', repo_name = 'com_google_protobuf')
################################################################################

################################################################################
# test only dependency
single_version_override(module_name = 'abseil-cpp', version = '20240722.0')
single_version_override(module_name = 'liburing', version = '2.7')
single_version_override(module_name = 'protobuf', version = '28.3')
bazel_dep(name = 'googletest', version = '1.15.2', repo_name = 'com_google_googletest', dev_dependency = True)
bazel_dep(name = 'platforms', version = '0.0.10', dev_dependency = True)
bazel_dep(name = 'rules_cc', version = '0.0.9', dev_dependency = True)
bazel_dep(name = 'rules_cuda', version = '0.2.3', dev_dependency = True)

# cuda toolchain
cuda = use_extension('@rules_cuda//cuda:extensions.bzl', 'toolchain', dev_dependency = True)
cuda.local_toolchain()

# cross compile toolchain
cross_config = use_extension('//:bazel/cross_toolchain.bzl', 'cross_config', dev_dependency = True)
use_repo(cross_config, 'cross_config_toolchain')
register_toolchains('@cross_config_toolchain//:cross-toolchain', dev_dependency = True)
################################################################################

bazel_dep(name = 'liburing', version = '2.7')
bazel_dep(name = 'brpc', version = '1.11')
archive_override(module_name = 'brpc',
  urls = ['https://github.com/apache/brpc/archive/30a56dd153010c0be88d7c197712e5b95843ff9c.zip'],
  integrity = 'sha256-94aE0H4NZo72DSB0wtq6YlMZc9fOpGAlK4QHgG0FvXg=',
  strip_prefix = 'brpc-30a56dd153010c0be88d7c197712e5b95843ff9c',
)
bazel_dep(name = 'tcmalloc', version = '0.0.0-20240411-5ed309d')
single_version_override(module_name = 'rules_fuzzing', version = '0.5.1')
