bazel_dep(name = 'babylon', version = '1.4.3')
bazel_dep(name = 'brpc', version = '1.11.0')
bazel_dep(name = 'yaml-cpp', version = '0.8.0')

single_version_override(module_name = 'protobuf', version = '28.3')

archive_override(module_name = 'brpc',
  urls = ['https://github.com/apache/brpc/archive/30a56dd153010c0be88d7c197712e5b95843ff9c.zip'],
  integrity = 'sha256-94aE0H4NZo72DSB0wtq6YlMZc9fOpGAlK4QHgG0FvXg=',
  strip_prefix = 'brpc-30a56dd153010c0be88d7c197712e5b95843ff9c',
)
