bazel_dep(name = 'babylon', version = '1.4.3')
bazel_dep(name = 'brpc', version = '1.11.0')
bazel_dep(name = 'tcmalloc', version = '0.0.0-20240411-5ed309d')

single_version_override(module_name = 'rules_fuzzing', version = '0.5.1')
#single_version_override(module_name = 'protobuf', version = '28.3')
single_version_override(module_name = 'protobuf', version = '28.3.arenastring')

archive_override(module_name = 'brpc',
  urls = ['https://github.com/apache/brpc/archive/30a56dd153010c0be88d7c197712e5b95843ff9c.zip'],
  integrity = 'sha256-94aE0H4NZo72DSB0wtq6YlMZc9fOpGAlK4QHgG0FvXg=',
  strip_prefix = 'brpc-30a56dd153010c0be88d7c197712e5b95843ff9c',
)

local_path_override(
  module_name = 'babylon',
  path = '../..',
)
